--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To Do List</title>
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -23,21 +23,44 @@
 
 </head>
 <body>
-    <div id="root" class="my-container">
-        <h1 class="text-center my-5">Cose da fare</h1>
-        <ul class="list-group">
-            <li v-for="task in tasks" class="list-group-item d-flex justify-content-between" :class="task.done ? 'text-decoration-line-through' : '' ">
-                <div>
-                <input v-model="task.done" class="me-2" role="button" type="checkbox">
-                    {{task.text}}
-                </div>
-                <div><i @click="deleteTask(task.id)" role="button" class="fa-solid fa-xmark"></i></div>
+    <div id="root" class="container">
+        <div class="card mt-5">
+            <h1 class="text-center">Cose da fare</h1>
+            <ul class="list-group border-top-0">
+                <li v-for="task in tasks" class="list-group-item d-flex justify-content-between border-start-0 border-end-0" :class="task.done ? 'text-decoration-line-through' : '' ">
+                    <div>
+                    <input v-model="task.done" class="me-2" role="button" type="checkbox">
+                        {{task.text}}
+                    </div>
+                    <div><i @click="deleteTask(task.id)" role="button" class="fa-solid fa-xmark"></i></div>
+                </li>
+                <li class="list-unstyled">
+                    <div class="input-group p-2">
+                        <input v-model.trim="newTaskText" @keyup.enter="addNewTask" type="text" class="form-control" placeholder="Inserisci una nuova cosa da fare">
+                        <button @click="addNewTask" class="btn btn-outline-secondary rounded-0"><i class="fa-solid fa-plus"></i></button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <ul class="mt-3 p-0 list-unstyled d-flex justify-content-between my-container">
+            <li>
+                <button class="btn text-success" @click="checkAll(true)">
+                    <i class="fa-solid fa-square-check"></i>
+                    Tutti Fatti
+                </button>
             </li>
-            <li class="list-unstyled">
-                <div class="input-group">
-                    <input v-model.trim="newTaskText" @keyup.enter="addNewTask" type="text" class="form-control" placeholder="Inserisci una nuova cosa da fare">
-                    <button @click="addNewTask" class="btn btn-outline-secondary"><i class="fa-solid fa-plus"></i></button>
-                </div>
+            <li>
+                <button class="btn text-warning" @click="checkAll(false)">
+                    <i class="fa-regular fa-square"></i>
+                    Tutti Da Fare
+                </button>
+            </li>
+            <li>
+                <button class="btn text-danger" @click="deleteAllCheck">
+                    <i class="fa-solid fa-trash"></i>
+                    Elimina Tutti
+                </button>
             </li>
         </ul>
     </div>
